--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_slidable: ^1.2.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  build_runner: ^2.3.2
 
 dev_dependencies:
   flutter_test:
